--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <!--Heading End-->
                     <tr>
                         <td width="40%">
-                            <img src="image/my photo" alt="Urvik Shah"  width="90%">
+                            <img src="images/my photo.jpg" alt="Urvik Shah"  width="90%">
                         </td>
                         <td width="60%">
                             <font face="arial" color="#ffffff" size="4">
