--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                            </font>
                         </td>
                         <td valign="top">
-                            <img src="success.jpg" alt="Achievements"  width="90%">
+                            <img src="images/success.jpg" alt="Achievements"  width="90%">
                         </td>
                         
                     </tr>
