--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <!--Heading End-->
                     <tr>
                         <td width="33%">
-                            <a href="Infromation1.html"><img src="meeting.jpg" alt="Infromation1"  width="100%"></a>
+                            <a href="Infromation1.html"><img src="images/meeting.jpg" alt="Infromation1"  width="100%"></a>
                         </td>
                         <td width="33%">
                             <a href="Infromation2.html"><img src="code.jpg" alt="Infromation1"  width="100%"></a>
