--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                             <a href="Infromation1.html"><img src="images/meeting.jpg" alt="Infromation1"  width="100%"></a>
                         </td>
                         <td width="33%">
-                            <a href="Infromation2.html"><img src="code.jpg" alt="Infromation1"  width="100%"></a>
+                            <a href="Infromation2.html"><img src="images/code.jpg" alt="Infromation1"  width="100%"></a>
                         </td>
                         <td width="33%">
-                            <a href="Infromation3.html"><img src="product.jpg" alt="Infromation1"  width="100%"></a>
+                            <a href="Infromation3.html"><img src="images/product.jpg" alt="Infromation1"  width="100%"></a>
                         </td>
                     </tr>
                     <tr>
